--- a/.travis.yml
+++ b/.travis.yml
@@ -1,30 +1,15 @@
-language: python
-python:
-- "2.7"
+sudo: requires
+language: python # but we don't actually use it, it's all docker
+
+services:
+  - docker
 
 install:
-- npm install -g jshint
+  - docker build -t openteacher .
+
+env:
+  - ARGS=-p test-suite full
+  - ARGS=-p code-complexity
 
 script:
-- cd openteacher
-- python openteacher.py -p test-suite all
-
-addons:
-  ssh_known_hosts: git.launchpad.net
-  apt:
-    packages:
-    - espeak
-    - python-chardet
-    - python-enchant
-    - python-pyqt5
-    - python-pyqt5.qtopengl
-    - python-pyqt5.qtmultimedia
-    - python-pyqt5.qtquick
-    - python-pyqt5.qtwebkit
-    - python-latexcodec
-    - tesseract-ocr
-    - cython
-    - python-babel
-    - python-faulthandler
-    - python-mccabe
-    - npm
+  - docker run openteacher $ARGS
