--- a/ubuntu/Dockerfile
+++ b/ubuntu/Dockerfile
@@ -5,8 +5,12 @@ RUN apt-get update && apt-get install -y \
   gettext \
   libreoffice-writer \
   libreoffice-calc \
+  nodejs \
+  npm \
   python-babel \
+  python-bzrlib \
   python-chardet \
+  python-coverage \
   python-cssselect \
   python-docutils \
   python-enchant \
@@ -16,7 +20,7 @@ RUN apt-get update && apt-get install -y \
   python-gi \
   python-imaging \
   python-launchpadlib \
-  python-mccabe npm \
+  python-mccabe \
   python-pip \
   python-polib \
   python-pygments \
@@ -28,26 +32,25 @@ RUN apt-get update && apt-get install -y \
   python-pyqt5.qtwebkit \
   python-recaptcha \
   python-requests \
+  python-stdeb \
   python-twisted \
   python-urwid \
   tesseract-ocr \
-  xvfb &&\
-  \
+  xvfb \
+  &&\
+  ln -s /usr/bin/nodejs /usr/bin/node &&\
   npm install -g jshint &&\
   pip install latexcodec &&\
   apt-get remove --purge -y npm python-pip &&\
   apt-get autoremove --purge -y &&\
   rm -rf /var/lib/apt/lists/*
 
-# TODO: integrate
-RUN apt-get update -y && apt-get install -y \
-  python-coverage \
-  nodejs \
-  python-bzrlib &&\
-  ln -s /usr/bin/nodejs /usr/bin/node
-
 COPY openteacher openteacher
 WORKDIR openteacher
+COPY ubuntu/run.sh /run.sh
+
 ENV DISPLAY :99
-COPY run.sh /run.sh
-CMD ["/run.sh"]
+ENTRYPOINT ["/run.sh"]
+CMD ["--help"]
+
+# FIXME: python-latexcodec
