update to f7b990b1aa8adee23ee63b4f0f521e66ada4b7bc; minor fixes

--- a/.travis.yml
+++ b/.travis.yml
@@ -21,4 +21,9 @@ after_success:
     docker login -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD";
     docker push openteacher/openteacher:ubuntu;
     fi
-  - ls output
+  - ls -alR output
+
+notifications:
+  email: false
+  irc:
+    - "chat.freenode.net#openteacher"
