Make the ubuntu image more space efficient & more ...
... like fixing its local support, and some minor other things.

--- a/.travis.yml
+++ b/.travis.yml
@@ -25,5 +25,4 @@ after_success:
 
 notifications:
   email: false
-  irc:
-    - "chat.freenode.net#openteacher"
+  irc: "chat.freenode.net#openteacher"
