Conversion to Python 3

--- a/.travis.yml
+++ b/.travis.yml
@@ -28,6 +28,8 @@ notifications:
   irc:
     channels:
       - "chat.freenode.net#openteacher"
+    use_notice: true
+    skip_join: true
 
 addons:
   ssh_known_hosts:
